smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/absolute-shape-name.smithy
// Syntax error at line 4, column 11: Expected a line break, but found DOT('.')
namespace com.foo

string com.foo#Bam
